--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,8 @@ jobs:
           command: |
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --output text >> ./.circleci/ansible/inventory.txtinventory
+            --output text >> ./.circleci/ansible/inventory.txt
+      - run: cat ./.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
