using right command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,12 +172,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install -y tar gzip
+            apk add --no-cache tar
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
-            sudo apt update
-            sudo apt install ansible
+            apk add --update ansible
       - run:
           name: Configure server
           command: |
