--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,24 +13,22 @@ commands:
             aws cloudformation delete-stack --stack-name udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
 
-#   revert-migrations:
-#     description: Revert the last migration if successfully run in the current workflow.
-#     parameters:
-#       # Add parameter here     
-#     steps:
-#       - run:
-#           name: Revert migrations
-#           # Add when this will run
-#           command: |
-#             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-#             SUCCESS = 1
-#             if(( $SUCCESS==1 )); 
-#             then
-#             #  cd ~/project/backend
-#             #  npm install
-#             #  Add revert code here. You can find this in the Getting Started section.
-#               exit 1
-#             fi
+  revert-migrations:
+    description: Revert the last migration if successfully run in the current workflow.
+    parameters:
+      # Add parameter here     
+    steps:
+      - run:
+          name: Revert migrations
+          When: on_fail
+          command: |
+            SUCCESS = $(curl https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_${CIRCLE_WORKFLOW_ID:0:7})
+            if(( $SUCCESS==1 )); 
+            then
+              cd ~/project/backend
+              npm install
+              npm run migration:revert
+            fi
             
 jobs:
   # build-frontend:
@@ -124,49 +122,74 @@ jobs:
   #           npm install
   #           npm audit fix --audit-level=critical --force
 
-  deploy-infrastructure:
+  # deploy-infrastructure:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run: yum install -y tar gzip
+  #     # - run:
+  #     #     name: Ensure back-end infrastructure exists
+  #     #     command: |
+  #     #       aws cloudformation deploy \
+  #     #       --template-file .circleci/files/backend.yml \
+  #     #       --tags project=udapeople \
+  #     #       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #     #       --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+  #     # - run:
+  #     #     name: Ensure front-end infrastructure exist
+  #     #     command: |
+  #     #       aws cloudformation deploy \
+  #     #         --template-file .circleci/files/frontend.yml \
+  #     #         --tags project=udapeople \
+  #     #         --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #     #         --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+
+  #     - run:
+  #         name: Add back-end ip to ansible inventory
+  #         command: |
+  #           aws ec2 describe-instances \
+  #           --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #           --output text >> ./.circleci/ansible/inventory.txt
+  #     - run: cat ./.circleci/ansible/inventory.txt
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - project/.circleci/ansible/inventory.txt
+  #     - destroy-environment     
+
+  # configure-infrastructure:
+  #   docker:
+  #     - image:  python:3.7-alpine3.11    
+  #   steps:
+  #     - checkout
+  #     - add_ssh_keys:
+  #         fingerprints: ["cb:80:59:ab:df:99:e6:5b:4a:66:03:ce:c8:fd:42:1b"]
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --no-cache tar
+  #           apk --no-cache add curl
+  #           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+  #           unzip awscliv2.zip
+  #           ./aws/install
+  #           apk add --update ansible
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run:
+  #         name: Configure server
+  #         command: |
+  #           cd .circleci/ansible
+  #           cat inventory.txt
+  #           ansible-playbook -i inventory.txt configure-server.yml
+
+  #     - destroy-environment     
+
+  run-migrations:
     docker:
-      - image: amazon/aws-cli
+      -image: circleci/node:13.8.0
     steps:
       - checkout
-      - run: yum install -y tar gzip
-      # - run:
-      #     name: Ensure back-end infrastructure exists
-      #     command: |
-      #       aws cloudformation deploy \
-      #       --template-file .circleci/files/backend.yml \
-      #       --tags project=udapeople \
-      #       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-      #       --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-      # - run:
-      #     name: Ensure front-end infrastructure exist
-      #     command: |
-      #       aws cloudformation deploy \
-      #         --template-file .circleci/files/frontend.yml \
-      #         --tags project=udapeople \
-      #         --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-      #         --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-
-      - run:
-          name: Add back-end ip to ansible inventory
-          command: |
-            aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --output text >> ./.circleci/ansible/inventory.txt
-      - run: cat ./.circleci/ansible/inventory.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/inventory.txt
-      - destroy-environment     
-
-  configure-infrastructure:
-    docker:
-      - image:  python:3.7-alpine3.11    
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["cb:80:59:ab:df:99:e6:5b:4a:66:03:ce:c8:fd:42:1b"]
       - run:
           name: Install dependencies
           command: |
@@ -175,34 +198,21 @@ jobs:
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             ./aws/install
-            apk add --update ansible
-      - attach_workspace:
-          at: ~/
       - run:
-          name: Configure server
+          name: Run migrations
           command: |
-            cd .circleci/ansible
-            cat inventory.txt
-            ansible-playbook -i inventory.txt configure-server.yml
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
 
-      # Here's where you will add some code to rollback on failure      
-
-#   run-migrations:
-#     docker:
-#       # Docker image here that supports NodeJS
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Run migrations
-#           command: |
-#             # Your code here
-#             exit 1
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             # Your code here
-#             exit 1
-#      # Here's where you will add some code to rollback on failure      
+      - run:
+          name: Send migration results to kvdb.io
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
+      - revert-migrations
 
 #   deploy-frontend:
 #     docker:
@@ -313,14 +323,14 @@ workflows:
       #     requires: [build-backend]
       # - scan-frontend:
       #     requires: [build-frontend]
-      - deploy-infrastructure
+      # - deploy-infrastructure
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
       #       branches:
       #         only: [test-feature-branch]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      # - run-migrations:
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+       - run-migrations
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
