--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,12 +307,15 @@ workflows:
     jobs:
       # - build-frontend
       - build-backend
+      - scan-backend:
+          requires: [build-backend]
+      - run-migrations
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
       #     requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
       # - scan-frontend:
       #     requires: [build-frontend]
       # - deploy-infrastructure
@@ -322,7 +325,7 @@ workflows:
       #         only: [test-feature-branch]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
-       - run-migrations
+      #  - run-migrations
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
