--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -309,7 +309,8 @@ workflows:
       - build-backend
       - scan-backend:
           requires: [build-backend]
-      - run-migrations
+      - run-migrations:
+          requires: [scan-backend]
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
