--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,22 +31,22 @@ commands:
             fi
             
 jobs:
-  # build-frontend:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys: [frontend-build]
-  #     - run:
-  #         name: Build front-end
-  #         command: |
-  #           cd frontend
-  #           npm install
-  #           npm run build
-  #     - save_cache:
-  #         paths: [frontend/node_modules]
-  #         key: frontend-build
+  build-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Build front-end
+          command: |
+            cd frontend
+            npm install
+            npm run build
+      - save_cache:
+          paths: [frontend/node_modules]
+          key: frontend-build
 
   # build-backend:
   #   docker:
@@ -122,28 +122,28 @@ jobs:
   #           npm install
   #           npm audit fix --audit-level=critical --force
 
-  # deploy-infrastructure:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run: yum install -y tar gzip
-  #     # - run:
-  #     #     name: Ensure back-end infrastructure exists
-  #     #     command: |
-  #     #       aws cloudformation deploy \
-  #     #       --template-file .circleci/files/backend.yml \
-  #     #       --tags project=udapeople \
-  #     #       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #     #       --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-  #     # - run:
-  #     #     name: Ensure front-end infrastructure exist
-  #     #     command: |
-  #     #       aws cloudformation deploy \
-  #     #         --template-file .circleci/files/frontend.yml \
-  #     #         --tags project=udapeople \
-  #     #         --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #     #         --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+  deploy-infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: yum install -y tar gzip
+      - run:
+          # name: Ensure back-end infrastructure exists
+          # command: |
+          #   aws cloudformation deploy \
+          #   --template-file .circleci/files/backend.yml \
+          #   --tags project=udapeople \
+          #   --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+          #   --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --tags project=udapeople \
+              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
 
   #     - run:
   #         name: Add back-end ip to ansible inventory
@@ -183,53 +183,59 @@ jobs:
   #           cat inventory.txt
   #           ansible-playbook -i inventory.txt configure-server.yml
 
-  #     - destroy-environment     
+  #     - destroy-environment  
 
-  run-migrations:
+    #            yum install -y python3
+            # yum install -y ansible  
+
+  # run-migrations:
+  #   docker:
+  #     - image: cimg/node:13.8.0
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Run migrations
+  #         command: |
+  #           cd backend
+  #           npm install
+  #           npm run migrations > migrations_dump.txt
+  #     - run:
+  #         name: Send migration results to kvdb.io
+  #         command: |
+  #           if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+  #           then
+  #             curl --insecure https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+  #           fi
+  #     - revert-migrations
+
+  deploy-frontend:
     docker:
-      - image: cimg/node:13.8.0
+      amazon/aws-cli
     steps:
       - checkout
+      - restore_cache:
+          keys: [frontend-build]
       - run:
+          name: Install dependencies
           command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-      - run:
-          name: Run migrations
-          command: |
-            cd backend
-            npm install
-            npm run migrations > migrations_dump.txt
-      - run:
-          name: Send migration results to kvdb.io
-          command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
-            then
-              curl --insecure https://kvdb.io/SKwi1rMgjj3xezMRW4hiBM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi
-      - revert-migrations
+            yum install -y tar gzip
+            yum update -y
+            yum install -y nodejs
 
-#   deploy-frontend:
-#     docker:
-#       # Docker image here that supports AWS CLI
-#     steps:
-#       # Checkout code from git
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             # your code here
-#       - run:
-#           name: Get backend url
-#           command: |
-#             # your code here
-#             export API_URL="http://${BACKEND_IP}:3030"
-#             echo "${API_URL}"
-#       - run:
-#           name: Deploy frontend objects
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure      
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+
+      # - run:
+      #     name: Deploy frontend objects
+      #     command: |
+      #       # your code here
+      # # Here's where you will add some code to rollback on failure      
                     
 #   deploy-backend:
 #     docker:
@@ -309,11 +315,10 @@ jobs:
 workflows:
   default:
     jobs:
-      # - build-frontend
+      - build-frontend
+      - deploy-infrastructure: [build-frontend]
+      - deploy-frontend: [deploy-infrastructure]
       # - build-backend
-      # - scan-backend:
-      #     requires: [build-backend]
-      - run-migrations
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
