--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,7 +210,7 @@ jobs:
 
   deploy-frontend:
     docker:
-      amazon/aws-cli
+      - image: amazon/aws-cli
     steps:
       - checkout
       - restore_cache:
