--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -44,6 +44,7 @@
 - name: "Installing node"
   shell: |
     cd ~/web
-    npm install
+    npm i
+    cd /dist
     pm2 stop default
     pm2 start npm main.js
