--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,7 +276,7 @@ jobs:
             cd ..
             tar -C backend -czvf artifact.tar.gz .
             cp artifact.tar.gz .circleci/ansible/roles/deploy/files
-            export TYPEORM_MIGRATIONS_DIR = ./migrations
+            export TYPEORM_MIGRATIONS_DIR = ./src/migrations
             export TYPEORM_ENTITIES = ./src/modules/domain/**/*.entity{.ts,.js}
             export TYPEORM_MIGRATIONS = ./migrations/*.ts
             cd .circleci/ansible
